# openWidGet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
docs/: architecture.md  development-workflow.md  licensing.md  manual-test.md  openWidGet-product-implementation-plan.md  widget-format.md  windows-dev-setup.md
docs/design/: product-proof-surface-prototype.html  product-proof-surface.md
docs/ko/: development-workflow.md  manual-test.md  project-note.md  quickstart.md
docs/spikes/: anchor-shortcut-lifecycle.md  desktop-icon-grid-positioning.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anchor_shortcuts.rs  desktop_grid.rs  lib.rs  main.rs
